syntax = "proto3";

service Orders {
    rpc findOrder(OrderRequest) returns (OrderResponse) {}
    rpc PlaceOrder (PlaceOrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
    int32 orderId = 1;
}

message PlaceOrderRequest {
  uint32 productId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string orderId = 1;
  uint32 productId = 2;
  int32 quantity = 3;
  string productName = 4;
}
